fix: security hardening from codebase audit
- ACC-2: Enforce minimum 32-char JWT_SECRET at startup (RFC 7518)
- ACC-3: Validate og:image URLs against private IP ranges to prevent
  client-side SSRF via link preview thumbnails
- ACC-12: Create dedicated 'ergo' MariaDB user instead of root, with
  MYSQL_ERGO_PASSWORD env var support
- ACC-15: Add structured security event logging (JSON to stdout) for
  auth, uploads, invites, and account changes
- ACC-1: Improve LiveKit token security docs — document Ergo API
  limitation and enumerate existing mitigations
- Remove default insecure credentials from .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,21 @@
 # accord server configuration
 # Copy to .env and edit: cp .env.example .env
+#
+# Values marked REQUIRED must be set before running.
+# The server warns at startup if secrets are still default values.
 
 # ==============================================================================
 # REQUIRED — you must set these before running
 # ==============================================================================
 
-# Secret for signing JWT tokens. Generate with: openssl rand -base64 32
-JWT_SECRET=change-me-to-a-random-string
+# Secret for signing JWT tokens (REQUIRED).
+# Generate with: openssl rand -base64 32
+JWT_SECRET=
 
-# LiveKit API credentials (used by accord-files and injected into LiveKit config).
-LIVEKIT_API_KEY=devkey
-LIVEKIT_API_SECRET=devsecret
+# LiveKit API credentials (REQUIRED).
+# Generate a key/secret pair and set the same values in config/livekit/config.yaml.
+LIVEKIT_API_KEY=
+LIVEKIT_API_SECRET=
 
 # ==============================================================================
 # SERVER IDENTITY
@@ -24,8 +29,14 @@ LIVEKIT_API_SECRET=devsecret
 # Examples: "chat.example.com", "localhost:8080"
 # SERVER_ID=chat.example.com
 
-# MySQL root password — docker-compose syncs this into Ergo via env override
-MYSQL_ROOT_PASSWORD=changeme
+# MySQL root password (REQUIRED) — used for initial DB setup.
+# Generate with: openssl rand -base64 32
+MYSQL_ROOT_PASSWORD=
+
+# MySQL password for the dedicated 'ergo' user (optional).
+# Falls back to MYSQL_ROOT_PASSWORD if unset.
+# For production, set a separate password: openssl rand -base64 32
+# MYSQL_ERGO_PASSWORD=
 
 # ==============================================================================
 # NETWORKING
@@ -35,8 +46,9 @@ MYSQL_ROOT_PASSWORD=changeme
 # Examples: "chat.example.com", ":80", "localhost:8080"
 # SITE_ADDRESS=:80
 
-# LiveKit WebSocket URL returned to clients (set to your LAN/public IP for remote access)
-# LIVEKIT_CLIENT_URL=ws://192.168.1.100:7880
+# LiveKit WebSocket URL returned to clients.
+# Set to your public/LAN address — do NOT hardcode a dev IP here.
+# LIVEKIT_CLIENT_URL=wss://chat.example.com:7880
 
 # Restrict CORS to specific origin(s). Comma-separated list.
 # When unset, all cross-origin requests are rejected.
@@ -46,12 +58,13 @@ MYSQL_ROOT_PASSWORD=changeme
 # BASE_URL=https://chat.example.com
 
 # Restrict IRC WebSocket origins (JSON array). Defaults to localhost in docker-compose.
-# Example:
+# In production, set this to your actual domain(s) only.
 # ERGO_WEBSOCKET_ORIGINS=["https://chat.example.com"]
 
-# Bearer token for Ergo HTTP API (used by accord-files; injected into Ergo config).
+# Bearer token for Ergo HTTP API (REQUIRED).
+# Used by accord-files; injected into Ergo config.
 # Generate with: openssl rand -base64 32
-ERGO_API_TOKEN=dev-ergo-api-token
+ERGO_API_TOKEN=
 
 # ==============================================================================
 # FILE UPLOADS
