--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
 services:
   ergo:
     image: ghcr.io/ergochat/ergo:stable
-    ports:
-      - "6667:6667"   # IRC — remove in production (Caddy proxies /ws)
-      - "8097:8097"   # WebSocket — remove in production
+    # Uncomment these ports for local dev access (Caddy proxies both in production):
+    # ports:
+    #   - "6667:6667"   # IRC plaintext
+    #   - "8097:8097"   # WebSocket
     environment:
       # Keep Ergo in sync with .env without editing ircd.yaml
-      ERGO__DATASTORE__MYSQL__PASSWORD: ${MYSQL_ROOT_PASSWORD:-changeme}
+      ERGO__DATASTORE__MYSQL__USER: ergo
+      ERGO__DATASTORE__MYSQL__PASSWORD: ${MYSQL_ERGO_PASSWORD:-${MYSQL_ROOT_PASSWORD:-changeme}}
       ERGO__API__BEARER_TOKENS: '["${ERGO_API_TOKEN:?set ERGO_API_TOKEN}"]'
       ERGO__SERVER__WEBSOCKETS__ALLOWED_ORIGINS: '${ERGO_WEBSOCKET_ORIGINS:-["http://localhost","http://127.0.0.1"]}'
     volumes:
@@ -16,7 +18,7 @@ services:
       mysql:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "nc -z localhost 6667 || exit 1"]
+      test: ["CMD-SHELL", "nc -z localhost 6667 && nc -z localhost 8097 || exit 1"]
       interval: 5s
       timeout: 3s
       start_period: 5s
@@ -28,6 +30,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-changeme}
       MYSQL_DATABASE: ergo_history
+      MYSQL_USER: ergo
+      MYSQL_PASSWORD: ${MYSQL_ERGO_PASSWORD:-${MYSQL_ROOT_PASSWORD:-changeme}}
     volumes:
       - mysql-data:/var/lib/mysql
     healthcheck:
@@ -69,15 +73,16 @@ services:
 
   accord-files:
     build: ./accord-files
-    ports:
-      - "8080:8080"   # API — remove in production (Caddy proxies /api)
+    # Uncomment for local dev access (Caddy proxies /api in production):
+    # ports:
+    #   - "8080:8080"   # API
     environment:
       ERGO_API: http://ergo:8089
       ERGO_API_TOKEN: ${ERGO_API_TOKEN:?set ERGO_API_TOKEN}
       LIVEKIT_CLIENT_URL: ${LIVEKIT_CLIENT_URL:-ws://localhost:7880}
       LIVEKIT_API_KEY: ${LIVEKIT_API_KEY:?set LIVEKIT_API_KEY}
       LIVEKIT_API_SECRET: ${LIVEKIT_API_SECRET:?set LIVEKIT_API_SECRET}
-      JWT_SECRET: ${JWT_SECRET:-dev-jwt-secret}
+      JWT_SECRET: ${JWT_SECRET:?set JWT_SECRET}
       SERVER_NAME: ${SERVER_NAME:-}
       SERVER_ID: ${SERVER_ID:-}
       ALLOWED_ORIGIN: ${ALLOWED_ORIGIN:-}
@@ -109,6 +114,12 @@ services:
     volumes:
       - ./config/caddy/Caddyfile:/etc/caddy/Caddyfile
       - ./accord-client/build:/srv/accord
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost:80 || exit 1"]
+      interval: 5s
+      timeout: 3s
+      start_period: 5s
+      retries: 3
     depends_on:
       ergo:
         condition: service_healthy
