fix: remove CORS/origin restrictions blocking Tauri clients on LAN
Auth is JWT-based (credential in header), not cookie-based, so Origin
restrictions added no CSRF protection — they only blocked legitimate
desktop clients sending Origin: https://tauri.localhost.

- Remove explicit Origin check from auth.ts
- Change CORS middleware to reflect any request origin back
- Remove ALLOWED_ORIGIN from env.ts, docker-compose, and .env.example
- Add docker-compose.lan.yml for LAN deployment (ports locked down,
  LAN_IP-derived config)
- Add default accord.json server config
- Add production web build URL derivation in login page
- Update README with dev/LAN deployment instructions and test counts

--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,27 @@
 JWT_SECRET=
 
 # LiveKit API credentials (REQUIRED).
-# Generate a key/secret pair and set the same values in config/livekit/config.yaml.
+# Generate a key/secret pair.
 LIVEKIT_API_KEY=
 LIVEKIT_API_SECRET=
+
+# MySQL root password (REQUIRED) — used for initial DB setup.
+# Generate with: openssl rand -base64 32
+MYSQL_ROOT_PASSWORD=
+
+# Bearer token for Ergo HTTP API (REQUIRED).
+# Used by accord-files; injected into Ergo config.
+# Generate with: openssl rand -base64 32
+ERGO_API_TOKEN=
+
+# ==============================================================================
+# LAN DEPLOYMENT (docker-compose.lan.yml only)
+# ==============================================================================
+
+# Your machine's LAN IP address. REQUIRED when using docker-compose.lan.yml.
+# The LAN compose file derives LIVEKIT_CLIENT_URL and BASE_URL from this value.
+# Not used by docker-compose.yml (dev mode).
+# LAN_IP=192.168.1.100
 
 # ==============================================================================
 # SERVER IDENTITY
@@ -26,12 +44,7 @@ LIVEKIT_API_SECRET=
 
 # Stable server identifier used in JWTs and invite links (URL-safe).
 # Typically your public hostname (without scheme).
-# Examples: "chat.example.com", "localhost:8080"
 # SERVER_ID=chat.example.com
-
-# MySQL root password (REQUIRED) — used for initial DB setup.
-# Generate with: openssl rand -base64 32
-MYSQL_ROOT_PASSWORD=
 
 # MySQL password for the dedicated 'ergo' user (optional).
 # Falls back to MYSQL_ROOT_PASSWORD if unset.
@@ -47,36 +60,13 @@ MYSQL_ROOT_PASSWORD=
 # ADMIN_ACCOUNTS=alice,bob
 
 # ==============================================================================
-# NETWORKING
+# NETWORKING (advanced — most users don't need these)
 # ==============================================================================
+# For LAN deployment, just set LAN_IP above. These are only needed for
+# custom setups (e.g. domain-based deployment, nginx, split-host).
 
 # Caddy site address. Set to your domain for automatic HTTPS, or :80 for plain HTTP.
-# Examples: "chat.example.com", ":80", "localhost:8080"
 # SITE_ADDRESS=:80
-
-# LiveKit WebSocket URL returned to clients.
-# Set to your public/LAN address — do NOT hardcode a dev IP here.
-# LIVEKIT_CLIENT_URL=wss://chat.example.com:7880
-
-# Restrict CORS to specific origin(s). Comma-separated list.
-# When unset, all cross-origin requests are rejected.
-# ALLOWED_ORIGIN=https://chat.example.com,https://app.example.com
-
-# Base URL for generated invite links (falls back to request Origin/Host if unset)
-# BASE_URL=https://chat.example.com
-
-# Restrict IRC WebSocket origins (JSON array). Defaults to localhost in docker-compose.
-# In production, set this to your actual domain(s) only.
-# ERGO_WEBSOCKET_ORIGINS=["https://chat.example.com"]
-
-# Bearer token for Ergo HTTP API (REQUIRED).
-# Used by accord-files; injected into Ergo config.
-# Generate with: openssl rand -base64 32
-ERGO_API_TOKEN=
-
-# ==============================================================================
-# FILE UPLOADS
-# ==============================================================================
 
 # Max upload size in bytes (default: 25 MB)
 # MAX_FILE_SIZE=26214400
